--- a/public/index.ejs
+++ b/public/index.ejs
@@ -4,33 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lauren</title>
-    <link href="./style.css" rel="stylesheet">
+    <title>Today's Spread</title>
+    <link href="./css/styles.css" rel="stylesheet">
 </head>
 
-<body class='dark-background'>
+<style>
+    body {
+        text-align: center;
+    }
 
-    <main role="main" class="container">
-        <h3 id='title'>Movies</h3>
+    button {
+        width: 60%;
+        height: 15vh;
+        font-size: x-large;
+    }
+</style>
 
-        <form name="form" action='/' method="POST">
+<body>
 
-            <input class='inline' name="title" type="text" placeholder="title">
-            <input class='inline' name="description" type="text" placeholder="description">
-            <input class='inline' name="rating" type="text" placeholder="rating">
-            <button class='inline' type="submit">Submit</button>
+    <div>
+        <h1>Ready to Grind?</h1>
 
+        <form name="form" action='/workout' method="GET">
+            <button type="submit">Work Out</button>
         </form>
+        <!-- <form name="form" action='/workout' method="GET">
+            <button style="margin-top: 20px;" type="submit">Update Moveset</button>
+        </form> -->
+    </div>
+    
 
-        <% reviews.forEach((review)=>{ %>
-        <div class='review'>
-            <h3><%=review.title%></h3>
-            <h6><%=review.rating%></h6>
-            <div><%=review.description%></div>
-        </div>
-        <%});%>
-
-    </main>
 
 </body>
 
