--- a/public/workout.ejs
+++ b/public/workout.ejs
@@ -21,7 +21,6 @@
         }
 
         main {
-            padding: 0 25%;
         }
 
         h3 {
@@ -36,37 +35,46 @@
             margin: 2rem 0;
         }
 
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
         
     </style>
 
 </head>
 
 <body>
-    <h1 style="text-align: center;">Today's Spread</h1>
+    <div class="container">
 
-    <main>
-        <% movements.forEach((movement)=>{ %>
-            <form action="/updatePR" method="post">
-                <input style="display:none" name="index" value=<%=movement.index%>></input>
-                <input style="display:none" name="type" value=<%=movement.type%>></input>
-                <h3 name="title">
-                    <%=movement.title%>
-                </h3>
-                <h6>
-                    <%=movement.setup%>
-                </h6>
-                <% if (movement.PR && movement.PR.reps) { %>
-                    <label>reps</label>
-                    <input name="reps" value=<%=movement.PR.reps%>></input>
-                <% } %>
-                <% if (movement.PR && movement.PR.reps) { %>
-                    <label>lbs</label>
-                    <input name="weight" value=<%=movement.PR.weight%>></input>
-                <% } %>
-                <button type="submit">update</button>
-            </form>
-        <%});%>
-    </main>
+        <h1>Today's Spread</h1>
+    
+        <main>
+            <% movements.forEach((movement)=>{ %>
+                <form action="/updatePR" method="post">
+                    <input style="display:none" name="index" value=<%=movement.index%>></input>
+                    <input style="display:none" name="type" value=<%=movement.type%>></input>
+                    <h3 name="title">
+                        <%=movement.title%>
+                    </h3>
+                    <h6>
+                        <%=movement.setup%>
+                    </h6>
+                    <% if (movement.PR && movement.PR.reps) { %>
+                        <label>reps</label>
+                        <input name="reps" value=<%=movement.PR.reps%>></input>
+                    <% } %>
+                    <% if (movement.PR && movement.PR.reps) { %>
+                        <label>lbs</label>
+                        <input name="weight" value=<%=movement.PR.weight%>></input>
+                    <% } %>
+                    <button type="submit">update</button>
+                </form>
+            <%});%>
+        </main>
+    </div>
 
 </body>
 
